2010-07-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* plotannot.tcl: Made a number of fixes (mistyped variable names,
	* plotaxis.tcl: unbraced expressions, ...) found by tclchecker.
	* plotbusiness.tcl: Added a few checker pragmas for bogus warnings.
	* plotcontour.tcl:
	* plotpack.tcl:
	* plotpriv.tcl:

2010-07-06  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotaxis.tcl: Fixing a bug wrt stacked histograms (reported by Torsten Berg)
	* plotaxis.tcl: Added support for minor tickmarks, ticklength, label offset
	* plotconfig.tcl: Ditto
	* plotaxis.tcl: Implemented solution for a bug in vtext method (supplied by Torsten Berg)
	* plotaxis.tcl: Corrected positioning of vertical text (bug noted by Torsten Berg)
	* plotchart.tcl: Added method for plotting functions (and several options)
	* plotpriv.tcl: Added support for line width
	* pkgIndex.tcl: Changed version Plotchart to 1.9.1

2010-06-21  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotchart.tcl: Added creation method for target diagrams, performance profiles and 3d ribbon plots
	* plotdemos14.tcl: Added demonstration of so-called target diagram
	* plotdemos15.tcl: Added demonstration of 3d ribbons (provided by Keith Vetter)
	* plotdemos16.tcl: Added demonstration of performance profiles
	* plotchart.man: Documentation added for target diagrams, performance profiles and 3d ribbon plots
	* plotspecial.tcl: New file for methods that deal with specialised plots
	* plot3d.tcl: Added ribbon plot method (by Keith Vetter)
	* pkgIndex.tcl: Changed version Plotchart to 1.9.0

2010-06-08  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl: Added a guard command to xyplot, this package
	  requires Tcl 8.5+.

2010-06-06  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* demo.tcl: Added demo program showing code and plot/chart
	* plotpriv.tcl: Moving DrawVtext to plotaxis.tcl (also checking Tk version)
	* plotpriv.tcl: Adding option to use darkening gradients