@@ -556,9 +556,9 @@ proc ::Plotchart::Tri_contour { canv x1 y1 f1 x2 y2 f2 x3 y3 f3 cont {doTrans 1}
 
         switch -- $class {
 
-            ############### Case A ###############
-
             "---" {
+                ############### Case A ###############
+
 #debug#                puts "class A = $class , $ic , $ff"
                 if {$contour_options(filled_contour)} {
                     set pxylist [list $x1 $y1 $x2 $y2 $x3 $y3]
@@ -579,9 +579,9 @@ proc ::Plotchart::Tri_contour { canv x1 y1 f1 x2 y2 f2 x3 y3 f3 cont {doTrans 1}
                 }
             }
 
-            ############### Case N ###############
-
             "===" {
+                ############### Case N ###############
+
 #debug#                puts "class N = $class , $ic , $ff"
                 if {$contour_options(filled_contour)} {
                     set pxylist [list $x1 $y1 $x2 $y2 $x3 $y3]
@@ -590,9 +590,9 @@ proc ::Plotchart::Tri_contour { canv x1 y1 f1 x2 y2 f2 x3 y3 f3 cont {doTrans 1}
                 return
             }
 
-            ############### Case B ###############
-
             "--=" {
+                ############### Case B ###############
+
 #debug#                puts "class B = $class , $ic , $ff"
                 if {$contour_options(filled_contour)} {
                     set pxylist [list $x1 $y1 $x2 $y2 $x3 $y3]
@@ -613,9 +613,9 @@ proc ::Plotchart::Tri_contour { canv x1 y1 f1 x2 y2 f2 x3 y3 f3 cont {doTrans 1}
                 }
             }
 
-            ############### Case D ###############
-
             "-=-" {
+                ############### Case D ###############
+
 #debug#                puts "class D = $class , $ic , $ff"
                 if {$contour_options(filled_contour)} {
                     set pxylist [list $x1 $y1 $x2 $y2 $x3 $y3]
@@ -636,9 +636,9 @@ proc ::Plotchart::Tri_contour { canv x1 y1 f1 x2 y2 f2 x3 y3 f3 cont {doTrans 1}
                 }
             }
 
-            ############### Case J ###############
-
             "=--" {
+                ############### Case J ###############
+
 #debug#                puts "class J = $class , $ic , $ff"
                 if {$contour_options(filled_contour)} {
                     set pxylist [list $x1 $y1 $x2 $y2 $x3 $y3]
@@ -659,9 +659,9 @@ proc ::Plotchart::Tri_contour { canv x1 y1 f1 x2 y2 f2 x3 y3 f3 cont {doTrans 1}
                 }
             }
 
-            ############### Case K ###############
-
             "=-=" {
+                ############### Case K ###############
+
 #debug#                puts "class K = $class , $ic , $ff"
                 set xylist [list $x1 $y1 $x3 $y3]
                 if {$contour_options(filled_contour)} {
@@ -690,9 +690,9 @@ proc ::Plotchart::Tri_contour { canv x1 y1 f1 x2 y2 f2 x3 y3 f3 cont {doTrans 1}
                 }
             }
 
-            ############### Case E ###############
-
             "-==" {
+                ############### Case E ###############
+
 #debug#                puts "class E = $class , $ic , $ff"
                 set xylist [list $x2 $y2 $x3 $y3]
                 if {$contour_options(filled_contour)} {
@@ -720,9 +720,9 @@ proc ::Plotchart::Tri_contour { canv x1 y1 f1 x2 y2 f2 x3 y3 f3 cont {doTrans 1}
                 }
             }
 
-            ############### Case M ###############
-
             "==-" {
+                ############### Case M ###############
+
 #debug#                puts "class M = $class , $ic , $ff"
                 set xylist [list $x1 $y1 $x2 $y2]
                 if {$contour_options(filled_contour)} {
@@ -751,9 +751,9 @@ proc ::Plotchart::Tri_contour { canv x1 y1 f1 x2 y2 f2 x3 y3 f3 cont {doTrans 1}
 
             }
 
-            ############### Case F ###############
-
             "-=+" {
+                ############### Case F ###############
+
 #debug#                puts "class F = $class , $ic , $ff"
                 set xylist [list $x2 $y2]
                 set xyf2  [fintpl $x3 $y3 $f3 $x1 $y1 $f1 $ff]
@@ -807,9 +807,9 @@ proc ::Plotchart::Tri_contour { canv x1 y1 f1 x2 y2 f2 x3 y3 f3 cont {doTrans 1}
 
             }
 
-            ############### Case H ###############
-
             "-+=" {
+                ############### Case H ###############
+
 #debug#                puts "class H = $class , $ic , $ff"
                 set xylist [fintpl $x1 $y1 $f1 $x2 $y2 $f2 $ff]
                 foreach {xx yy} $xylist {}
@@ -862,9 +862,9 @@ proc ::Plotchart::Tri_contour { canv x1 y1 f1 x2 y2 f2 x3 y3 f3 cont {doTrans 1}
 
             }
 
-            ############### Case L ###############
-
             "=-+" {
+                ############### Case L ###############
+
 #debug#                puts "class L = $class , $ic , $ff"
                 set xylist [fintpl $x2 $y2 $f2 $x3 $y3 $f3 $ff]
                 foreach {xx yy} $xylist {}
@@ -918,9 +918,9 @@ proc ::Plotchart::Tri_contour { canv x1 y1 f1 x2 y2 f2 x3 y3 f3 cont {doTrans 1}
 
             }
 
-            ############### Case C ###############
-
             "--+" {
+                ############### Case C ###############
+
 #debug#                puts "class C = $class , $ic , $ff"
                 set xyf1  [fintpl $x2 $y2 $f2 $x3 $y3 $f3 $ff]
                 set xyf2  [fintpl $x3 $y3 $f3 $x1 $y1 $f1 $ff]
@@ -990,9 +990,9 @@ proc ::Plotchart::Tri_contour { canv x1 y1 f1 x2 y2 f2 x3 y3 f3 cont {doTrans 1}
 
             }
 
-            ############### Case G ###############
-
             "-+-" {
+                ############### Case G ###############
+
 #debug#                puts "class G = $class , $ic , $ff"
                 set xyf1  [fintpl $x1 $y1 $f1 $x2 $y2 $f2 $ff]
                 set xyf2  [fintpl $x2 $y2 $f2 $x3 $y3 $f3 $ff]
@@ -1063,9 +1063,9 @@ proc ::Plotchart::Tri_contour { canv x1 y1 f1 x2 y2 f2 x3 y3 f3 cont {doTrans 1}
 
             }
 
-            ############### Case I ###############
-
             "+--" {
+                ############### Case I ###############
+
 #debug#                puts "class I = $class , $ic , $ff"
                 set xyf1  [fintpl $x1 $y1 $f1 $x2 $y2 $f2 $ff]
                 set xyf2  [fintpl $x3 $y3 $f3 $x1 $y1 $f1 $ff]
@@ -1714,7 +1714,7 @@ proc ::Plotchart::DrawIsolinesFunctionValues {canv xvec yvec fmat {cont {}}} {
     for {set ix 0} {$ix < $nx} {incr ix} {
       lappend xi [lindex $xvec $ix]
     }
-    lappend xmat $xi 
+    lappend xmat $xi
   }
   set ymat {}
   for {set iy 0} {$iy < $ny} {incr iy} {
@@ -1723,7 +1723,7 @@ proc ::Plotchart::DrawIsolinesFunctionValues {canv xvec yvec fmat {cont {}}} {
     for {set ix 0} {$ix < $nx} {incr ix} {
       lappend yi $yiy
     }
-    lappend ymat $yi 
+    lappend ymat $yi
   }
   DrawIsolines $canv $xmat $ymat $fmat $cont
 }
